# stock-viewer

./: Cargo.toml  config.toml
core/: Cargo.toml
core/src/: extractor.rs  lib.rs  util.rs
gui/: Cargo.toml
gui/src/: main.rs  style.rs  ui.rs
src/: config.rs  extractor.rs  lib.rs  main.rs  server.rs  util.rs
templates/: index.html
web/: Cargo.toml
web/src/: main.rs  server.rs
web/templates/: index.html
