[package]
name = "stock-viewer"
version = "0.1.0"
authors = ["Tanapol Prucksakorn <tanapol.pr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
reqwest = "0.10.7"
tokio = { version = "0.2.22", features = ["full"]}
toml = "0.5.6"
serde_derive = "1.0.114"
serde = "1.0.114"
anyhow = "1.0.40"
log = "0.4.14"
fern = { version = "0.6.0", features = ["colored"] }

chrono = "0.4.13"
askama = "0.10.3"
actix-web = "2.0.0"
actix-rt = "1.1.1"
actix-files = "0.2.2"
