[package]
name = "stock_viewer"
version = "0.1.0"
authors = ["Tanapol Prucksakorn <tanapol.pr@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/zynaxsoft/stock-viewer"
readme = "README.md"

[workspace]
members = [
    "core",
    "web",
    "gui",
]

[dependencies]
sv_core = { path = "core" }

