[package]
name = "gui"
version = "0.1.0"
authors = ["Tanapol Prucksakorn <tanapol.pr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"

iced = { version = "0.3.0", features = ["tokio"]}

tokio = { version = "1", features = ["full"]}
log = "0.4.14"
fern = { version = "0.6.0", features = ["colored"] }
chrono = "0.4.13"

sv_core = { path = "../core" }
